--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
-Django~=5.0.2
-decouple~=0.0.7
+asgiref==3.7.2
+beautifulsoup4==4.12.3
+Django==5.0.2
+django-bootstrap4==24.1
+GDAL==3.8.4
+geographiclib==2.0
+geopy==2.4.1
+pillow==10.2.0
+psycopg2-binary==2.9.9
+python-decouple==3.8
+soupsieve==2.5
+sqlparse==0.4.4
