This is an extremely important push. This sets up the PostGIS database and the requirements for the application to run with it. Wholesale changes made to the database and models -- ##NOT ready for everyone else yet

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,25 @@
-asgiref==3.7.2
+asgiref==3.8.1
 beautifulsoup4==4.12.3
-Django==5.0.2
+Django==5.0.4
+django-appconf==1.0.6
 django-bootstrap4==24.1
+django-imagekit==5.0.0
+et-xmlfile==1.1.0
+Faker==24.4.0
 GDAL==3.8.4
 geographiclib==2.0
 geopy==2.4.1
+numpy==1.26.4
+openpyxl==3.1.2
+pandas==2.2.1
+pilkit==3.0
 pillow==10.2.0
 psycopg2-binary==2.9.9
+python-dateutil==2.9.0.post0
 python-decouple==3.8
+pytz==2024.1
+six==1.16.0
 soupsieve==2.5
 sqlparse==0.4.4
+tzdata==2024.1
+your-app==0.1.0
