--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,66 @@
+algoliasearch==3.0.0
+algoliasearch-django==3.0.0
 asgiref==3.8.1
 beautifulsoup4==4.12.3
+blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+click-config-file==0.6.0
+configobj==5.0.8
+coverage==7.4.4
 Django==5.0.4
 django-appconf==1.0.6
 django-bootstrap4==24.1
+django-compressor==4.4
+django-elasticsearch-dsl==8.0
+django-extensions==3.2.3
 django-imagekit==5.0.0
+django-sass-processor==1.4
+elastic-transport==8.13.0
+elasticsearch==8.13.0
+elasticsearch-dsl==8.12.0
 et-xmlfile==1.1.0
 Faker==24.4.0
+Flask==3.0.2
 GDAL==3.8.4
 geographiclib==2.0
 geopy==2.4.1
+geos==0.2.3
+gitdb==4.0.11
+GitPython==3.1.42
+googlemaps==4.10.0
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+libsass==0.20.1
+lxml==5.2.0
+MarkupSafe==2.1.5
 numpy==1.26.4
 openpyxl==3.1.2
 pandas==2.2.1
 pilkit==3.0
 pillow==10.2.0
 psycopg2-binary==2.9.9
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.1
+rcssmin==1.1.1
+requests==2.31.0
+rjsmin==1.2.1
+scss==0.8.73
+scss-compile==0.1.3
+signals==0.0.2
 six==1.16.0
+smmap==5.0.1
 soupsieve==2.5
 sqlparse==0.4.4
+toml==0.10.2
 tzdata==2024.1
+urllib3==2.2.1
+uuid==1.30
+Werkzeug==3.0.2
 your-app==0.1.0
