Saving API endpoints

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,4 @@ geopy==2.4.1
 pandas==2.2.1
 django-allauth~=0.61.1
 django-autoslug~=1.9.9
-django-bootstrap4
-django-imagekit
-django-debug-toolbar
-psycopg2
+djangorestframework~=3.15.1
