--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,45 @@
+asgiref==3.8.1
+beautifulsoup4==4.12.3
+blinker==1.7.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cryptography==42.0.5
+defusedxml==0.7.1
 Django==5.0.4
+django-allauth==0.61.1
+django-bootstrap4==24.1
+django-cors-headers==4.3.1
+django-cors-middleware==1.5.0
+django-debug-toolbar==4.3.0
 Faker==24.4.0
-geopy==2.4.1
+Flask==3.0.3
+idna==3.7
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+npm==0.1.1
+oauthlib==3.2.2
+optional-django==0.1.0
 pandas==2.2.1
-django-allauth~=0.61.1
-django-autoslug~=1.9.9
-djangorestframework~=3.15.1
+pip==23.1.2
+psycopg2-binary==2.9.9
+pycparser==2.22
+PyJWT==2.8.0
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+python3-openid==3.2.0
+pytz==2024.1
+requests==2.31.0
+requests-oauthlib==2.0.0
+setuptools==67.7.2
+six==1.16.0
+soupsieve==2.5
+sqlparse==0.4.4
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
+Werkzeug==3.0.2
+wheel==0.40.0
+your-app==0.1.0
