Front end finished, needs styling. npm run serve

--- a/.env
+++ b/.env
@@ -2,5 +2,4 @@ GOOGLE_MAPS_API_KEY=AIzaSyCqXSyxVe0V1V9i8sjy8jD1vWA4AKd7aVU
 DATABASE_PASSWORD=fokhYq-vuqte6-dyscom
 OAUTH_CLIENT_ID=529244561099-kav6a7sm8t20mar0smf1l61eouosureg.apps.googleusercontent.com
 OAUTH_CLIENT_SECRET=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
-GOOGLE_AUTH_REDIRECT_URI=http://127.0.0.1:8000/accounts/google/login/callback/
-```
+GOOGLE_AUTH_REDIRECT_URI=https://localhost:8080/auth/callback
