--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,42 @@
 asgiref==3.8.1
 beautifulsoup4==4.12.3
-blinker==1.7.0
 certifi==2024.2.2
-cffi==1.16.0
 charset-normalizer==3.3.2
-click==8.1.7
-click-config-file==0.6.0
-configobj==5.0.8
-coverage==7.4.4
-cryptography==42.0.5
-defusedxml==0.7.1
+distlib==0.3.8
 Django==5.0.4
-django-allauth==0.61.1
+django-allauth==0.62.1
 django-appconf==1.0.6
 django-autoslug==1.9.9
-django-compressor==4.4
+django-bootstrap4==24.3
 django-cors-headers==4.3.1
 django-debug-toolbar==4.3.0
 django-extensions==3.2.3
 django-imagekit==5.0.0
-django-sass-processor==1.4
 djangorestframework==3.15.1
-elastic-transport==8.13.0
-elasticsearch-dsl==8.12.0
-et-xmlfile==1.1.0
-Faker==24.4.0
-GDAL==3.8.4
+djangorestframework-gis==1.0
+djangorestframework-simplejwt==5.3.1
+Faker==25.0.0
+filelock==3.14.0
 geographiclib==2.0
 geopy==2.4.1
-geos==0.2.3
-git-filter-repo==2.38.0
-gitdb==4.0.11
-GitPython==3.1.42
-googlemaps==4.10.0
-idna==3.6
-iniconfig==2.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.3
-libsass==0.20.1
-lxml==5.2.0
-MarkupSafe==2.1.5
+idna==3.7
 numpy==1.26.4
-oauthlib==3.2.2
-openpyxl==3.1.2
-packaging==24.0
-pandas==2.2.1
+pandas==2.2.2
 pilkit==3.0
-pillow==10.2.0
-pip==24.0
-pluggy==1.4.0
+pillow==10.3.0
+pipenv==2023.12.1
+platformdirs==4.2.1
 psycopg2-binary==2.9.9
-pycparser==2.22
 PyJWT==2.8.0
-pyparsing==3.1.2
-pytest==8.1.1
-pytest-django==4.8.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
-python-dotenv==1.0.1
-python3-openid==3.2.0
 pytz==2024.1
-PyYAML==6.0.1
-rcssmin==1.1.1
 requests==2.31.0
-requests-oauthlib==2.0.0
-rjsmin==1.2.1
-setuptools==69.0.2
-signals==0.0.2
 six==1.16.0
-smmap==5.0.1
 soupsieve==2.5
-sqlparse==0.4.4
-toml==0.10.2
+sqlparse==0.5.0
+typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
-uuid==1.30
-Werkzeug==3.0.2
-wheel==0.42.0
+virtualenv==20.26.1
 your-app==0.1.0
