--- a/Pipfile
+++ b/Pipfile
@@ -13,8 +13,11 @@ djangorestframework = "*"
 geopy = "*"
 django-allauth = "*"
 requests = "*"
+pytest = "*"
 
 [dev-packages]
+pytest = "*"
+pytest-django = "*"
 
 [requires]
 python_version = "3.11"
