--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@ DATABASE_PASSWORD=fokhYq-vuqte6-dyscom
 OAUTH_CLIENT_ID=529244561099-kav6a7sm8t20mar0smf1l61eouosureg.apps.googleusercontent.com
 OAUTH_CLIENT_SECRET=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
 GOOGLE_AUTH_REDIRECT_URI=https://localhost:8080/auth/callback
-GDAL_LIBRARY_PATH=/opt/homebrew/Cellar/gdal/3.8.5/lib/libgdal.34.3.8.5.dylib
+GDAL_LIBRARY_PATH=/opt/homebrew/Cellar/gdal/3.8.5_2/lib/libgdal.34.3.8.5.dylib
 GEOS_LIBRARY_PATH=/opt/homebrew/Cellar/geos/3.12.1/lib/libgeos_c.1.18.1.dylib
+
